--- a/src/app/organization/organization-selection.tpl.html
+++ b/src/app/organization/organization-selection.tpl.html
@@ -18,7 +18,7 @@
 		</div>
 	</div>
 	<div layout="row" layout-align="center center" ng-if="vm.organizations.length === 0 || !vm.organizations">
-		New to Okra? That's alright. Click here to create an organization.
+		New to Okra? That's alright.
 		<md-button class="md-raised md-primary" ng-click="vm.addOrganization()" aria-label="cancel">
 			Create an Organization <i class="fa fa-plus"></i>
 		</md-button>
