--- a/src/app/tree/tree.tpl.html
+++ b/src/app/tree/tree.tpl.html
@@ -32,22 +32,17 @@
 	<!-- objectives -->
 	<div layout="row" class="collapse" layout-align="center center" id="objectiveNode">
 		<div class="objective" layout="row" layout-align="start" ng-repeat="objective in vm.tree.Objectives">
-			<a href ng-click="vm.openNodeModalDashboard($event, true, 'Objective', objective, false, false)" class="tree-node" ng-class="{completed: objective.Completed === true}" layout-align="start" ng-show="!objective.isEditMode">
+			<button href class="tree-node" ng-class="{completed: objective.Completed === true}" layout-align="start">
 				{{objective.Name}}
 				<md-tooltip ng-if="objective.Name.length > 14">
 					{{objective.Name}}
 				</md-tooltip>
-			</a>
-			<div class="tree-node" ng-class="{completed: objective.Completed === true}" layout-align="start" ng-show="objective.isEditMode">
-				<md-input-container>
-				   <md-input required class="short" name="treeName" ng-model="objective.newName" autocapitalize="off"></md-input>
-				</md-input-container>
-			</div>
+			</button>
 			<div layout="column" layout-align="start end">
 	            <md-button href class="md-raised" ng-click="vm.changeCurrentObjective(objective)" ok-collapse ok-toggle-color linked-to="objectiveNode"  all-linked-nodes="vm.linkedNodeIds" aria-label="toggle">
 	            	<i class="fa fa-plus"></i>
 	        	</md-button>
-	        	<md-button href class="md-raised md-primary fade-in" aria-label="edit">
+	        	<md-button href class="md-raised md-primary fade-in" ng-click="vm.openNodeModalDashboard($event, true, 'Objective', objective, false, false)" aria-label="edit">
 					<i class="fa fa-pencil"></i>
 	        	</md-button>
 	        </div>
@@ -63,22 +58,17 @@
 	<!-- key results -->
 	<div layout="row" class="collapse" layout-align="center center" id="keyResultNode">
 		<div class="key-result" layout="row" layout-align="start" ng-repeat="keyResult in vm.currentObjective.KeyResults">
-			<a href ng-click="vm.openNodeModalDashboard($event, true, 'Key Result', keyResult, vm.currentObjective, false)" class="tree-node" ng-class="{completed: keyResult.Completed === true}" ng-show="!keyResult.isEditMode">
+			<button href class="tree-node" ng-class="{completed: keyResult.Completed === true}">
 				{{keyResult.Name}}
 				<md-tooltip ng-if="keyResult.Name.length > 14">
 					{{keyResult.Name}}
 				</md-tooltip>
-			</a>
-			<div class="tree-node" ng-class="{completed: keyResult.Completed === true}" layout-align="start" ng-show="keyResult.isEditMode">
-				<md-input-container>
-				   <md-input required class="short" name="treeName" ng-model="keyResult.newName" autocapitalize="off"></md-input>
-				</md-input-container>
-			</div>
+			</button>
 			<div layout="column" layout-align="start end">
 				<md-button href class="md-raised" ng-click="vm.changeCurrentKeyResult(keyResult)" ok-collapse ok-toggle-color linked-to="keyResultNode" all-linked-nodes="vm.linkedNodeIds" aria-label="toggle">
 	            	<i class="fa fa-plus"></i>
 	        	</md-button>
-	        	<md-button href class="md-raised md-primary fade-in" aria-label="edit">
+	        	<md-button href class="md-raised md-primary fade-in" ng-click="vm.openNodeModalDashboard($event, true, 'Key Result', keyResult, vm.currentObjective, false)" aria-label="edit">
 					<i class="fa fa-pencil"></i>
 	        	</md-button>
 	        </div>
