--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -1,43 +1,3 @@
-@-webkit-keyframes glowGreen {
-  0% {
-    color: #99b742;
-  }
-
-  100% {
-    color: #8a8a8a;
-  }
-}
-
-@-moz-keyframes glowGreen {
-  0% {
-    color: #99b742;
-  }
-
-  100% {
-    color: #8a8a8a;
-  }
-}
-
-@-ms-keyframes glowGreen {
-  0% {
-    color: #99b742;
-  }
-
-  100% {
-    color: #8a8a8a;
-  }
-}
-
-@keyframes glowGreen {
-  0% {
-    color: #99b742;
-  }
-
-  100% {
-    color: #8a8a8a;
-  }
-}
-
 md-item {
   margin: 0px 10px;
 }
@@ -129,7 +89,7 @@ md-content {
 }
 
 .error-msg {
-  color: #ef5350;
+  color: #f44336;
   opacity: 1;
 }
 
@@ -198,14 +158,6 @@ ul.list-horizontal li span.sub-text {
   margin-right: 15px;
 }
 
-.glowing-green {
-  -webkit-animation: glowGreen 1s infinite alternate;
-  -moz-animation: glowGreen 1s infinite alternate;
-  -ms-animation: glowGreen 1s infinite alternate;
-  -o-animation: glowGreen 1s infinite alternate;
-  animation: glowGreen 1s infinite alternate;
-}
-
 .fade-in.ng-enter, .fade-in.ng-leave {
   -webkit-transition: opacity linear 0.5s;
   -moz-transition: opacity linear 0.5s;
@@ -217,13 +169,21 @@ ul.list-horizontal li span.sub-text {
   float: left;
 }
 
-.completed {
-  background-color: #99b742 !important;
-  background-image: linear-gradient(90deg, transparent 50%, rgba(255, 255, 255, 0.5) 50%);
-  background-size: 40px 50px;
+.status {
+  position: absolute;
+  left: 6px;
+  top: 5px;
+  font-size: 12px;
 }
-.completed .md-subheader {
-  color: #8a8a8a;
+.status .fa-exclamation {
+  color: #f44336;
+}
+.status .fa-check {
+  color: #99b742;
+}
+
+button {
+  border: 0;
 }
 
 .organization-wrapper > [layout=row], .organization-wrapper > [layout=column] {
@@ -311,6 +271,7 @@ ul.list-horizontal li span.sub-text {
 .organization-wrapper .task-node {
   background-color: #99b742;
   padding: 10px 10px;
+  padding-left: 20px;
   color: #3c3a3a;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
@@ -320,6 +281,13 @@ ul.list-horizontal li span.sub-text {
   margin-top: 10px;
   text-decoration: none;
   width: 250px;
+  position: relative;
+}
+.organization-wrapper #taskNode [layout-align="start center"] {
+  margin-top: -5px;
+}
+.organization-wrapper #taskNode [layout-align="start center"]:first-child {
+  margin-top: 25px;
 }
 .organization-wrapper .objective + .objective,
 .organization-wrapper .key-result + .key-result,
@@ -330,6 +298,9 @@ ul.list-horizontal li span.sub-text {
 .organization-wrapper .task-column {
   max-height: 100%;
   margin-bottom: 20px;
+}
+.organization-wrapper .task-row {
+  margin-top: 25px !important;
 }
 .organization-wrapper .task-row .md-primary {
   background: transparent !important;
