--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -266,7 +266,8 @@ button {
 
 	.objective.active, 
 	.key-result.active,
-	.organization.active {
+	.organization.active,
+	.tree.active {
 
 		.tree-node {
 			background-color: $okraGreen;
