--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -127,6 +127,11 @@ body {
 	font-family: 'Raleway', sans-serif;
 }
 
+.content-wrapper {
+	width: 1200px;
+	margin: 0 auto;
+}
+
 md-content {
 	height: 100vh;
 	background-color: #2E2E2E !important;
@@ -246,6 +251,7 @@ button {
 		text-overflow: ellipsis;
 		text-decoration: none;
 		text-align: center;
+		opacity: 0.7;
 
 		md-input-container {
 			padding: 0px;
@@ -271,6 +277,8 @@ button {
 
 		.tree-node {
 			background-color: $okraGreen;
+			font-weight: 700;
+			opacity: 1;
 		}
 	}
 
