--- a/src/styles/sass/_animations.scss
+++ b/src/styles/sass/_animations.scss
@@ -21,3 +21,18 @@
     @content;
   } 
 }
+
+.disable-animations {
+    //Use this for transitions
+    &.ng-enter,
+    &.ng-leave,
+    &.ng-animate{
+        -webkit-transition: none !important;
+        transition: none !important;
+    }
+    //Use this for keyframe animations
+    &.ng-animate {
+       -webkit-animation: none 0s;
+       animation: none 0s;
+    }
+}
