--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -151,7 +151,7 @@ md-content {
 	opacity: 0;
 }
 
-[ng\:cloak], [ng-cloak], .ng-cloak {
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
   display: none !important;
 }
 
