fixed the org panel styling

--- a/src/app/tree/tree.tpl.html
+++ b/src/app/tree/tree.tpl.html
@@ -1,4 +1,5 @@
 <section class="organization-wrapper">
+    <div organization-summary-widget></div> 
 	<div class="tree active" layout="row" layout-align="center" id="organizationNode">
 		<button class="tree-node" id="treeNode"
 			ok-collapse 
