--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -22,8 +22,8 @@ md-item {
 .organization-widget {
   width: 200px;
   position: absolute;
-  bottom: -180px;
-  left: 15px;
+  top: 15px;
+  left: 10px;
   background: transparent;
   border-radius: 5px;
   border: 1px solid #99b742;
@@ -38,11 +38,13 @@ md-item {
 .organization-widget .org-name {
   margin-top: 20px;
   margin-bottom: 20px;
+  color: #ffffff;
+  font-weight: bold;
 }
-.organization-widget .md-raised {
+.organization-widget button {
   color: #ffffff !important;
-  margin: 0 auto;
-  display: block;
+  padding: 5px 10px;
+  margin-left: 0 !important;
 }
 
 .md-dialog-container md-content {
@@ -209,7 +211,7 @@ button {
 }
 
 .organization-wrapper .centered-row {
-  padding: 0px 200px;
+  padding: 0px 253px;
 }
 .organization-wrapper .tree-node {
   padding: 20px 20px;
