upgrade ui/design to v0.4

--- a/src/app/organization/organization-summary-widget.tpl.html
+++ b/src/app/organization/organization-summary-widget.tpl.html
@@ -1,5 +1,5 @@
 <div class="organization-widget">
-	<img class="logo" src="http://img4.wikia.nocookie.net/__cb20140723203502/thehungergames/images/b/b9/House_stark_by_azraeuz-d61daf1.png">
+	<img class="logo" src="assets/okra-default-logo.png">
 	<div class="org-name">{{vm.organization}}</div>
 	<div>
 	  <md-button class="md-raised" aria-label="members">
