fixed some issues with jsplumb

--- a/src/app/organization/add-tree-modal.tpl.html
+++ b/src/app/organization/add-tree-modal.tpl.html
@@ -23,8 +23,8 @@
 			<div layout="row" layout-align="center center">
 		    	<div layout-align="start start">
 					<md-radio-group class="horizontal-radio-group" layout="row" ng-model="modal.timeframe">
-				      <md-radio-button value="monthly" aria-label="Monthly"> Monthly </md-radio-button>
-				      <md-radio-button value="yearly" artial-label="Yearly"> Yearly </md-radio-button>
+				      <md-radio-button value="quarterly" aria-label="Quarterly"> Quarterly </md-radio-button>
+				      <md-radio-button value="annually" artial-label="Annually"> Annually </md-radio-button>
 				    </md-radio-group>
 				</div>
 			</div>
